--- a/LanguageTrainer/View/TranslationView.xaml
+++ b/LanguageTrainer/View/TranslationView.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:conv="clr-namespace:MK.UI.WPF.Converters;assembly=MK.UI.WPF"
+             xmlns:loc="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension"
              MinWidth="300">
     <UserControl.Resources>
         <conv:BooleanToVisibilityConverter x:Key="boolToVis" />
@@ -10,7 +11,7 @@
     <Border BorderThickness="1" BorderBrush="Black" Margin="1">
         <StackPanel Orientation="Vertical">
             <DockPanel>
-                <Button Command="{Binding SpeakCommand}" ToolTip="Wysłuchaj">
+                <Button Command="{Binding SpeakCommand}" ToolTip="{loc:LocText Key=Listen, Dict=Lbl, Assembly=LanguageTrainer.Resources}">
                     <Button.Template>
                         <ControlTemplate>
                             <Image Source="{Binding IconSource}" Width="16" Height="16"/>
